# RenAI

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json
.next-build/: __next.__PAGE__.txt  __next._head.txt  __next._tree.txt  _not-found.html  _not-found.txt  index.html  index.txt
.next-build/_next/static/chunks/: 178b30babdc5bfad.js  568bb50841da8e0a.js  77cfcbdaf7691120.css
.next-build/_not-found/: __next._head.txt  __next._index.txt  __next._not-found.txt  __next._tree.txt
.next-build/_not-found/__next._not-found/: __PAGE__.txt
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: CharacterSelect.tsx  GameScreen.tsx  SetupScreen.tsx
src/lib/: utils.ts
