[package]
name = "ai-renai"
version = "0.1.0"
description = "AI Renai Simulation Game"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_renai_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.5.7"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
zip = "8.2.0"
tempfile = "3.26.0"
futures-util = "0.3.32"
reqwest = { version = "0.13.2", default-features = false, features = ["native-tls", "blocking", "json", "stream"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
